deploy/k8s/06-catalog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  namespace: petstore
  labels:
    app: catalog-service
    app.kubernetes.io/part-of: petstore-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog-service
          image: us-central1-docker.pkg.dev/petstore-app-1788943786/petstore-repo/catalog-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
              name: http
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 40
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: petstore
  labels:
    app: catalog-service
spec:
  ports:
    - port: 8082
      targetPort: 8082
      name: http
  selector:
    app: catalog-service
