deploy/k8s/07-inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: petstore
  labels:
    app: inventory-service
    app.kubernetes.io/part-of: petstore-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: us-central1-docker.pkg.dev/petstore-app-1788943786/petstore-repo/inventory-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
              name: http
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8084
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8084
            initialDelaySeconds: 40
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: petstore
  labels:
    app: inventory-service
spec:
  ports:
    - port: 8084
      targetPort: 8084
      name: http
  selector:
    app: inventory-service
