deploy/k8s/08-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: petstore
  labels:
    app: order-service
    app.kubernetes.io/part-of: petstore-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: us-central1-docker.pkg.dev/petstore-app-1788943786/petstore-repo/order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
              name: http
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8083
            initialDelaySeconds: 75
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: petstore
  labels:
    app: order-service
spec:
  ports:
    - port: 8083
      targetPort: 8083
      name: http
  selector:
    app: order-service
